--- a/admin_app/templates/admin_app/dashboard.html
+++ b/admin_app/templates/admin_app/dashboard.html
@@ -1,3 +1,8 @@
+{% extends "admin_app/base.html" %}
+
+{% block content %}
+
 <h1>Admin Dashboard</h1>
 
-<a href="{% url "admin_logout" %}">Logout</a>
+{% endblock content %}
+
