--- a/admin_app/templates/admin_app/login.html
+++ b/admin_app/templates/admin_app/login.html
@@ -1,10 +1,28 @@
-<form method="POST">
-    {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    
+    <div class="container">
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+        <form method="POST" class="login__form">
+            {% csrf_token %}
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            
+            <button type="submit">Login</button>
+        </form>
 
-    <button type="submit">Login</button>
-</form>
+    </div>
+
+</body>
+</html>
