--- a/admin_app/static/css/login.css
+++ b/admin_app/static/css/login.css
@@ -6,8 +6,8 @@
 
 body {
     font-family: 'Courier New', Courier, monospace;
-    background-color: #fff;
-    color: #333;
+    background-color: #333;
+    color: #fff;
 }
 
 .container {
