--- a/admin_app/static/css/styles.css
+++ b/admin_app/static/css/styles.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
 }
 
+body {
+    min-height: 100vh;
+}
+
+.container {
+    margin: 1em;
+    padding: 1em;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #333;
+    color: #fff;
+}
+
 .client__form {
     margin: auto;
     padding: 2em;
