--- a/admin_app/templates/admin_app/base.html
+++ b/admin_app/templates/admin_app/base.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url "clients" %}">Clients</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">TBD</a>
+                <a class="nav-link" href="{% url "documents" %}">Dcouments</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)">TBD</a>
@@ -42,7 +42,10 @@
         </div>
       </nav>
 
-      {% block content %}{% endblock content %}
+      <main class="container">
+        {% block content %}{% endblock content %}
+      </main>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
