--- a/admin_app/templates/admin_app/clients.html
+++ b/admin_app/templates/admin_app/clients.html
@@ -3,23 +3,28 @@
 {% block content %}
 
 <h1>Clients</h1>
+<div>
+    <a href="{% url 'client_new' %}" ><button class="btn btn-primary">New</button></a>
+</div>
 
 <div>
-    <table>
+    <table class="table table-striped">
         <thead>
-            <td>Username</td>
-            <td>Edit Details</td>
-            <td>Edit Password</td>
+            <tr>
+                <th scope="col">Username</th>
+                <th scope="col">Edit Details</th>
+                <th scope="col">Edit Password</th>
+            </tr>
         </thead>
-    {% for user in users %}
-    
-        <tr>
-            <td>{{ user.username }}<td>
-            <td><a href="{{ user.id }}">Edit</a></td>
-            <td><a href="password/{{ user.id }}">Edit</a></td>
-        </tr>
-
-    {% endfor %}
+        <tbody>
+            {% for user in users %}
+            <tr>
+                <td>{{ user.username }}</td>
+                <td><a href="{{ user.id }}">Edit</a></td>
+                <td><a href="password/{{ user.id }}">Edit</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
 </div>
 
