--- a/client_app/templates/client_app/dashboard.html
+++ b/client_app/templates/client_app/dashboard.html
@@ -1,3 +1,12 @@
-<h1>Client Dashboard</h1>
+{% extends "client_app/base.html" %}
 
-<a href="{% url "client_logout" %}">Logout</a>
+{% block content %}
+
+<div>
+    <a href="{% url "upload_pdf" %}">Upload PDF</a>
+</div>
+
+<div>
+    <p>Uploaded PDF: <a href="{{ request.user.userpdf.pdf.url }}">Download</a></p>
+</div>
+{% endblock content %}
