--- a/client_app/templates/client_app/base.html
+++ b/client_app/templates/client_app/base.html
@@ -14,7 +14,7 @@
           <a class="nav-link active" aria-current="page" href="{% url "client_dashboard" %}">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url "documents" %}">Docs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
