multiple documents and delete capabilities

--- a/admin_app/templates/admin_app/base.html
+++ b/admin_app/templates/admin_app/base.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="{% url "clients" %}">Clients</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url "documents" %}">Dcouments</a>
+                <a class="nav-link" href="{% url "admin_documents" %}">Dcouments</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)">TBD</a>
