--- a/admin_app/templates/admin_app/clients.html
+++ b/admin_app/templates/admin_app/clients.html
@@ -12,6 +12,7 @@
         <thead>
             <tr>
                 <th scope="col">Username</th>
+                <th>Documents</th>
                 <th scope="col">Edit Details</th>
                 <th scope="col">Edit Password</th>
             </tr>
@@ -20,6 +21,7 @@
             {% for user in users %}
             <tr>
                 <td>{{ user.username }}</td>
+                <td><a href="/manage/client_docs/{{user.id}}">Go</a></td>
                 <td><a href="{{ user.id }}">Edit</a></td>
                 <td><a href="password/{{ user.id }}">Edit</a></td>
             </tr>
