--- a/client_app/static/client_app/css/client_login.css
+++ b/client_app/static/client_app/css/client_login.css
@@ -6,7 +6,7 @@
 
 body {
     min-height: 100vh;
-    background-color: #eee;
+    background-color: #313131;
 }
 
 .container {
@@ -18,20 +18,47 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-.client__login__form {
+.client__login__card {
     margin: auto;
+    margin-top: 200px;
+    width: 600px;
     padding: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 600px;
-    border: 1px solid rgba(100, 100, 100, 0.5);
+    background-color: #3a3a3a;
+    color: #eee;
+    /* border: 1px solid rgba(100, 100, 100, 0.5); */
     border-radius: 10px;
-    box-shadow: rgba(145, 149, 153, 0.2) 0px 8px 24px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .1), 0 6px 20px rgba(0, 0, 0, .1)
 }
 
-.login__form label {}
+.client__login__card__top {
+    width: 100%;
+    padding: 1em;
+    border-bottom: 1px solid #bbb;
+    color: rgb(228, 228, 28);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.client__login__card__mid {
+    width: 100%;
+    padding: 1em;
+    border-bottom: 1px solid #bbb;
+}
+
+.client__login__card__btm {
+    width: 100%;
+    padding: 1em;
+}
+
+.client__login__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .client__login__form input {
     margin: .5em 0;
@@ -44,12 +71,15 @@ body {
 .client__login__form button {
     margin: .5em 0;
     padding: .5em;
+    background-color: #222;
+    color: #eee;
     border: 1px solid rgba(145, 149, 153, 0.7);
+    border-radius: 5px;
     cursor: pointer;
 }
 
 .client__login__form button:hover {
-    background-color: #fff;
+    background-color: #363636;
     border: 1px solid rgba(145, 149, 153, 0.7);
 }
 
