--- a/client_app/templates/client_app/base.html
+++ b/client_app/templates/client_app/base.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="nav-link active" aria-current="page" href="{% url "client_dashboard" %}">Client Dashboard</a>
+        <a class="nav-link logo" aria-current="page" href="{% url "client_dashboard" %}">ARC Support Services</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="{% url 'password_change' %}">Update Password</a></li>
                 <li><a class="dropdown-item" href="{% url "client_logout" %}">Logout</a></li>
               </ul>
             </li>
