--- a/client_app/templates/client_app/upload_pdf.html
+++ b/client_app/templates/client_app/upload_pdf.html
@@ -5,6 +5,6 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Upload PDF</button>
+    <button type="submit" class="btn btn-dark">Upload PDF</button>
 </form>
 {% endblock content %}
