--- a/client_app/templates/client_app/login.html
+++ b/client_app/templates/client_app/login.html
@@ -18,6 +18,7 @@
             </div>
 
             <div class="client__login__card__mid">
+                <p class="dateEl" id="fullDate"></p>
                 <form method="POST" class="client__login__form">
                     {% csrf_token %}
                     <!-- <label for="username">Username:</label> -->
@@ -48,8 +49,20 @@
     </div>
 
     <script>
-        const date = new Date()
-        document.getElementById("date").innerText = date.getFullYear();
+
+        const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+        const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"]
+        
+        const date = new Date();
+        const day = date.getDay();
+        const dayDate = date.getDate()
+        const month = date.getMonth();
+        const year = date.getFullYear();
+        const hours = date.getHours();
+        const minutes = date.getMinutes();
+        
+        document.getElementById("fullDate").innerText = `${days[day - 1]} ${day} ${months[month]} ${year} ${hours}:${minutes}`;
+        document.getElementById("date").innerText = year;
     </script>
 
 </body>
