--- a/client_app/templates/client_app/login.html
+++ b/client_app/templates/client_app/login.html
@@ -50,7 +50,7 @@
 
     <script>
 
-        const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+        const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]
         const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"]
         
         const date = new Date();
@@ -61,7 +61,7 @@
         const hours = date.getHours();
         const minutes = date.getMinutes();
         
-        document.getElementById("fullDate").innerText = `${days[day - 1]} ${day} ${months[month]} ${year} ${hours}:${minutes}`;
+        document.getElementById("fullDate").innerText = `${days[day]} ${dayDate} ${months[month]} ${year} ${hours}:${minutes}`;
         document.getElementById("date").innerText = year;
     </script>
 
