--- a/client_app/templates/client_app/base.html
+++ b/client_app/templates/client_app/base.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{% url "documents" %}">Documentation</a>
+              {% comment %} <a class="nav-link" href="{% url "documents" %}">Documentation</a> {% endcomment %}
             </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0)">TBD</a>
