--- a/client_app/templates/client_app/upload_document.html
+++ b/client_app/templates/client_app/upload_document.html
@@ -2,9 +2,11 @@
 {% extends "client_app/base.html" %}
 
 {% block content %}
+<h1>Upload Document: {{ document_title.title }}</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-dark">Upload PDF</button>
+    <button type="submit">Upload</button>
 </form>
+
 {% endblock content %}
