update to staff tables

--- a/client_app/templates/client_app/dashboard.html
+++ b/client_app/templates/client_app/dashboard.html
@@ -35,8 +35,9 @@
   <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
     <div class="card-header">Staff Competency</div>
     <div class="card-body">
-      <h5 class="card-title">Dark card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">Total Number of Staff</h5>
+      <p class="card-text">{{ staff_num }} members of staff.</p>
+      <a href="{% url "client_staff" %}">View</a>
     </div>
   </div>
 </div>
