--- a/client_app/templates/client_app/dashboard.html
+++ b/client_app/templates/client_app/dashboard.html
@@ -7,7 +7,7 @@
 <div class="row">
 
 <div class="col">
-  <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+  <div class="card text-bg-dark mb-3" style="width: 100%;">
       <div class="card-header">Process Manuals</div>
       <div class="card-body">
         <h5 class="card-title">Uploaded</h5>
@@ -22,17 +22,18 @@
 </div>
 
   <div class="col">
-  <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+  <div class="card text-bg-dark mb-3" style="width: 100%;">
     <div class="card-header">Tooling &amp; Equipment</div>
     <div class="card-body">
-      <h5 class="card-title">Dark card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <h5 class="card-title">Total pieces of equipment.</h5>
+      <p class="card-text">{{ equipment_num }} pieces of equipment.</p>
+      <a href="{% url "client_equipment" %}">View</a>
     </div>
   </div>
 </div>
 
   <div class="col">
-  <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+  <div class="card text-bg-dark mb-3" style="width: 100%;">
     <div class="card-header">Staff Competency</div>
     <div class="card-body">
       <h5 class="card-title">Total Number of Staff</h5>
