--- a/admin_app/templates/admin_app/client_edit.html
+++ b/admin_app/templates/admin_app/client_edit.html
@@ -20,4 +20,6 @@
     <a href="{% url "clients" %}">Back</a>
 </form>
 
+
+<button><a href="password/{{ user.id }}">Edit</a></button>
 {% endblock content %}
