--- a/admin_app/templates/admin_app/client_equipment.html
+++ b/admin_app/templates/admin_app/client_equipment.html
@@ -4,6 +4,25 @@
 
 <h1>Equipment</h1>
 
+<table>
+    <thead>
+        <th>Equipment</th>
+        <th>Item No.</th>
+        <th>Make</th>
+        <th>Model</th>
+        <th>Serial No.</th>
+        <th>Group</th>
+    </thead>
+    <tbody>
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+        <!--TO BUILD OUT EQUIPMENT TABLE-->
+    </tbody>
+</table>
+
 {% for equipment in equipment_list %}
     <div class="card text-bg-dark mb-3">
         <h3>Equipment: {{ equipment.equipment.name }}</h3>
