--- a/admin_app/templates/admin_app/base.html
+++ b/admin_app/templates/admin_app/base.html
@@ -21,18 +21,12 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url "clients" %}">Clients</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url "admin_documents" %}">Dcouments</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">TBD</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown link
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Equipment</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li><a class="dropdown-item" href="{% url "admin_logout" %}">Logout</a></li>
                 </ul>
