added ability to crud all equipement

--- a/admin_app/templates/admin_app/dashboard.html
+++ b/admin_app/templates/admin_app/dashboard.html
@@ -4,5 +4,10 @@
 
 <h1>Admin Dashboard</h1>
 
+<a href="{% url 'clients' %}" class="btn btn-info">View Clients</a>
+<br>
+<a href="{% url 'admin_all_equipment' %}" class="btn btn-info">View Equipment List</a>
+
+
 {% endblock content %}
 
