admin app updates

--- a/admin_app/templates/admin_app/client_competency.html
+++ b/admin_app/templates/admin_app/client_competency.html
@@ -1,46 +1,37 @@
-{% extends "admin_app/base.html" %}
+<!-- staff_qualifications_by_role.html -->
+{% extends 'admin_app/base.html' %}
+{% load custom_filters %}
 
 {% block content %}
-
-<h1>Competency</h1>
-
-{% for staff in staff_list %}
-
-<div class="card text-bg-dark mb-3" style="width: 100%;">
-    <div class="card-header">
-        <p>{{ staff.first_name }} {{ staff.last_name }}</p>
-        <p>Staff ID: {{ staff.staff_id }}</p>
-    </div>
-    <div class="card-body">
-
-        
-        <h3>Roles:</h3>
-        {% for staff_role in staff.staffrole_set.all %}
-        <p>{{ staff_role.role.role_name }}</p>
-        {% endfor %}
-        
-        
-        <h3>Qualifications:</h3>
-        {% for qualification in staff.staffqualification_set.all %}
-        {% with qualification_date=qualification.qualification_date %}
-        {% with time_diff=today|timesince:qualification_date %}
-                    <p 
-                    {% if qualification_date < today %}
-                            style="background-color: red;"
-                        {% elif time_diff <= "2 months" %}
-                        style="background-color: yellow;"
-                        {% endif %}
-                        >
-                        {{ qualification.qualification.qualification_name }} - {{ qualification_date }}
-                    </p>
-                    {% endwith %}
-                    {% endwith %}
+<div class="container mt-5">
+    {% for role_name, role_data in data.items %}
+        <h2>{{ role_name }}</h2>
+        <table class="table table-dark table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Staff Name</th>
+                    {% for qualification_name in role_data.qualifications %}
+                        <th>{{ qualification_name }}</th>
                     {% endfor %}
-                    
-                    
-    </div>
+                </tr>
+            </thead>
+            <tbody>
+                {% for staff in role_data.staff_data %}
+                    <tr>
+                        <td>{{ staff.staff_name }}</td>
+                        {% for qualification_name in role_data.qualifications %}
+                            <td>
+                                {% if staff.qualifications|get_item:qualification_name %}
+                                    {{ staff.qualifications|get_item:qualification_name }}
+                                {% else %}
+                                    x
+                                {% endif %}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endfor %}
 </div>
-
-{% endfor %}
-
-{% endblock content %}
+{% endblock %}
