--- a/admin_app/templates/admin_app/admin_add_equipment.html
+++ b/admin_app/templates/admin_app/admin_add_equipment.html
@@ -8,7 +8,7 @@
 {% for equipment_group in equipment_list %}
 
 
-<table class="table table-dark">
+<table class="table table-dark table-striped table-bordered">
     <thead>
         <tr>
             <h3>{{ equipment_group.group }}</h3>
