--- a/admin_app/templates/admin_app/clients.html
+++ b/admin_app/templates/admin_app/clients.html
@@ -8,7 +8,7 @@
 </div>
 
 <div>
-    <table class="table table-striped">
+    <table class="table table-dark table-striped">
         <thead>
             <tr>
                 <th scope="col">Username</th>
