added add button to staff

--- a/admin_app/templates/admin_app/client_competency.html
+++ b/admin_app/templates/admin_app/client_competency.html
@@ -3,6 +3,8 @@
 {% load custom_filters %}
 
 {% block content %}
+<a href="" class="btn btn-primary">Add</a>
+
 <div class="container mt-5">
     {% for role_name, role_data in data.items %}
         <h2>{{ role_name }}</h2>
