--- a/admin_app/templates/admin_app/client_competency.html
+++ b/admin_app/templates/admin_app/client_competency.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 <div class="container mt-5">
+
+    <a href="{% url "admin_competency_staff_add" user  %}" class="btn btn-info">Add</a>
+
     {% for role_name, role_data in data.items %}
         <h2>{{ role_name }}</h2>
         <table class="table table-dark table-striped table-bordered">
