--- a/admin_app/templates/admin_app/base.html
+++ b/admin_app/templates/admin_app/base.html
@@ -12,7 +12,7 @@
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url "dashboard" %}">AdminApp</a>
+          <a class="navbar-brand" href="{% url "aa_dashboard" %}">AdminApp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,7 +28,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Equipment</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="{% url "admin_logout" %}">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url "aa_logout" %}">Logout</a></li>
                 </ul>
               </li>
             </ul>
