--- a/admin_app/templates/admin_app/aa_login.html
+++ b/admin_app/templates/admin_app/aa_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'admin_app/css/admin_login.css' %}">
     <title>Document</title>
 </head>
 <body>
