--- a/admin_app/templates/admin_app/clients.html
+++ b/admin_app/templates/admin_app/clients.html
@@ -2,34 +2,43 @@
 
 {% block content %}
 
-<h1>Clients</h1>
-<div>
-    <a href="{% url 'client_new' %}" ><button class="btn btn-primary">New</button></a>
-</div>
 
-<div>
-    <table class="table table-dark table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Username</th>
-                <th>Documents</th>
-                <th>Equipment</th>
-                <th>Competency</th>
-                <th scope="col">Edit Details</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
-            <tr>
-                <td>{{ user.username }}</td>
-                <td><a href="/manage/client_docs/{{user.id}}">View</a></td>
-                <td><a href="{% url 'admin_equipment' user.id%}">View</a></td>
-                <td><a href="{% url 'admin_competency' user.id%}">View</a></td>
-                <td><a href="{{ user.id }}">Edit</a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+<div class="card text-bg-dark mb-3">
+    
+    <div class="card-header">
+        <h1>Clients</h1>
+    </div>
+    
+    <div class="card-body">
+        <table class="table table-dark table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">Username</th>
+                    <th>Documents</th>
+                    <th>Equipment</th>
+                    <th>Competency</th>
+                    <th scope="col">Edit Details</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                <tr>
+                    <td>{{ user.username }}</td>
+                    <td><a href="/manage/client_docs/{{user.id}}">View</a></td>
+                    <td><a href="{% url 'admin_equipment' user.id%}">View</a></td>
+                    <td><a href="{% url 'admin_competency' user.id%}">View</a></td>
+                    <td><a href="{{ user.id }}">Edit</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    
+    <div class="card-footer">
+        <a href="{% url 'client_new' %}" ><button class="btn btn-success">New</button></a>
+    </div>
+    
 </div>
 
 {% endblock content %}
