--- a/admin_app/templates/admin_app/clients/aa_clients.html
+++ b/admin_app/templates/admin_app/clients/aa_clients.html
@@ -24,7 +24,7 @@
             <tbody>
                 {% for user in users %}
                 <tr>
-                    <td>{{ user.username }}</td>
+                    <td><a href="{% url "aa_client_read" user.id %}">{{ user.username }}</a></td>
                     <td><a href="/manage/client_docs/{{user.id}}">View</a></td>
                     <td><a href="{% url 'admin_equipment' user.id%}">View</a></td>
                     <td><a href="{% url 'admin_competency' user.id%}">View</a></td>
@@ -36,7 +36,7 @@
     </div>
     
     <div class="card-footer">
-        <a href="{% url 'client_new' %}" ><button class="btn btn-success">New</button></a>
+        <a href="{% url 'aa_client_create' %}" ><button class="btn btn-success">New</button></a>
     </div>
     
 </div>
