--- a/admin_app/templates/admin_app/clients/aa_client_update.html
+++ b/admin_app/templates/admin_app/clients/aa_client_update.html
@@ -17,7 +17,7 @@
     <label class="form-label">Lastname</label>
     <input class="form-control" name="lastname" value="{{ user.last_name }}" />
     <input type="submit" value="Save" />
-    <a href="{% url "clients" %}">Back</a>
+    <a href="{% url "aa_clients" %}">Back</a>
 </form>
 
 
