--- a/admin_app/templates/admin_app/clients/aa_client_read.html
+++ b/admin_app/templates/admin_app/clients/aa_client_read.html
@@ -4,6 +4,17 @@
 
 <h1>Client Read</h1>
 
+<div class="card text-bg-dark mb-3">
+    <div class="card-body">
+        <p>Username: {{ user.username }}</p>
+        <p>First Name: {{ user.first_name }}</p>
+        <p>Last Name: {{ user.last_name }}</p>
+    </div>
+    <div class="card-body">
+        {{ user_profile }}
+    </div>
+</div>
+
 <a href="{% url "aa_client_update" user.id %}">Edit</a>
 <br />
 <a href="{% url "aa_client_delete" user.id %}">Delete</a>
