--- a/admin_app/static/admin_app/css/admin_styles.css
+++ b/admin_app/static/admin_app/css/admin_styles.css
@@ -35,3 +35,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.aa_client_read {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
